What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 12, 2011
+ [mickael] WIP: add a read MCT marker function (part 2) 

October 11, 2011
* [mickael] WIP: correct a segfault inside j2k_dump output
* [mickael] WIP: correct some segfault with win platform and remove a aligned allocation which produce error when a realloc is done on this pointer.
* [mickael] WIP: add stream length value to read unknown marker size, backport 855 into V2 framework, correct memory leak into get_cstr_info
* [mickael] WIP: add output elements about decoding of jp2 files with last tile part lenght equal zero
* [mickael] WIP: correct mistake with JP2 files and manage correctly the text_GBR.jp2 filecase
! [kaori]   change -v option was renamed to -u, which is equivalent to -TP long option

October 10, 2011
* [vincent] fix 'distcheck' rule
+ [vincent] add libopenjpeg-jpwl.pc.in
* [vincent] fix output when --disable-shared or --disable-static is passed to configure. Minor clean up of configure.ac.
! [kaori]   change -v option was reactivated for JPIP

October 07, 2011
* [mickael] WIP: correct mistake in text output inside set_decoded_area function (credit to Winfried)
+ [mickael] WIP: update jp2 dump functions with the new V2 framework
+ [mickael] WIP: update output filename of conformance dump test to be compatible with new baseline
* [mickael] WIP: correct wrong input in dump_codec function and add missing return value
* [mickael] WIP: correct mistake inside set_decoded_area function (credit to Francois De Vieilleville)
+ [mickael] WIP: backport rev 967-969 from opj-1.5 to trunk about test suite enhancement and rename of opj_configh.cmake.in

October 06, 2011
* [mickael] WIP: fix build errors with windows configuration induced by rev 960
+ [mickael] WIP: Enhance html documentation generation with cmake, add a mainpage to this documentation and bump version to 1.99.0 into the main CMakeLists (as rev951)

October 05, 2011