@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 October 12, 2011
++ [mickael] WIP: add a read MCC marker function (part 2) 
 + [mickael] WIP: add a read MCT marker function (part 2) 
 
 October 11, 2011
